[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/PingPong_ball.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=3]
[ext_resource path="res://Sounds/platform.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/wall.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.1

[sub_resource type="CircleShape2D" id=2]
radius = 16.5

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.0636363 ), 0.0, -0.191831, 0, 0, Vector2( 0.664835, 0.409091 ), 1.08727, 1.08727, 0, 0, Vector2( 0.967033, 0.918182 ), 2.25018, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.417219, 1 )
colors = PoolColorArray( 0.0740204, 0.106377, 0.902344, 0, 0.134277, 0.213585, 0.859375, 1, 0.0794678, 0.843695, 0.96875, 1 )

[node name="Ball" type="RigidBody2D"]
position = Vector2( 442.105, 268.144 )
mass = 0.23
physics_material_override = SubResource( 1 )
contacts_reported = 2
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
MIN_VEL = 450
MAX_VEL = 1400
INIT_VEL = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
scale = Vector2( 0.042, 0.042 )
texture = ExtResource( 1 )

[node name="Trail2D" type="Line2D" parent="."]
z_index = -1
points = PoolVector2Array( 191.127, 410.743 )
width = 25.0
width_curve = SubResource( 3 )
gradient = SubResource( 4 )
script = ExtResource( 3 )
distance = 10.0

[node name="PlatformSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="WallSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0
[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
